# Dinosauria

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README  README.md  SConstruct  cmake_install.cmake  colorizer.py  create_zip.sh  install_manifest.txt  open.sh  runTests  settings.xml  src_file.cmake
_CPack_Packages/Linux/ZIP/Dinosauria-0.2-Linux/res/dinos/: blockasaurus.xml  triceratops.xml
_CPack_Packages/Linux/ZIP/Dinosauria-0.2-Linux/res/effects/bloom/: final.frag  hblur.frag  vblur.frag
_CPack_Packages/Linux/ZIP/Dinosauria-0.2-Linux/res/effects/dof/: hblur.frag  vblur.frag
_CPack_Packages/Linux/ZIP/Dinosauria-0.2-Linux/res/materials/: blockasaurus.mat  water.mat
_CPack_Packages/Linux/ZIP/Dinosauria-0.2-Linux/res/shaders/: background.vert  bar.frag  bar.vert  button.frag  button.vert  deffered.frag  fbo_fog.frag  fbo_pass.vert  fontView.frag  fontView.vert  ground.ctrl  ground.frag  ground.geom  ground.vert  ground_shadow.frag  pass.vert  shadow.vert  std.frag  t0.eval  t0.geom  t0.vert  t1.frag  text.frag  text.vert  water.frag  water.vert
cmake/: FindOGRE.cmake
converters/: bconverter.cpp  converter.cpp
doc/: Doxyfile
lib/: libBulletCollision.so.2.81  libBulletDynamics.so.2.81  libBulletSoftBody.so.2.81  libLinearMath.so.2.81  libpugixml.so.1.2
ogre_cfg/: ogre.cfg  plugins.cfg  resources.cfg
res/GUI/: Readme.txt  VersionHistory.txt
res/GUI/CEGUI_files/imagesets/: GlossySerpent.imageset  GlossySerpentCursors.imageset  GlossySerpentFHD.imageset
res/GUI/CEGUI_files/layouts/: PopupMenuFHD.layout  PopupMenuFHD_0.8.layout  PopupMenu_0.8.layout  WorkbenchFHD_0.8.layout  Workbench_0.8.layout  workbenchoptions.layout  workbenchoptionsfhd.layout
res/GUI/CEGUI_files/layouts/004_003/: Hiscores.layout
res/GUI/CEGUI_files/layouts/016_009/: Hiscores.layout
res/GUI/CEGUI_files/looknfeel/: GlossySerpent.Amber.looknfeel  GlossySerpent.Default.looknfeel  GlossySerpent.Jade.looknfeel  GlossySerpent.looknfeel  GlossySerpentFHD.Amber.looknfeel  GlossySerpentFHD.Default.looknfeel  GlossySerpentFHD.Jade.looknfeel  GlossySerpentFHD.looknfeel
res/GUI/CEGUI_files/schemes/: GlossySerpent.scheme  GlossySerpentFHD.scheme
res/GUI/mySkin/imagesets/: SnakeSkin.imageset
res/GUI/mySkin/looknfeel/: SnakeSkin.looknfeel
res/GUI/mySkin/schemes/: SnakeSkin.scheme
res/GUI/sheets/: main_menu.layout  options.layout  test.layout  test0.xml
res/dinos/: deinonychus.xml  parasaur.xml  triceratops.xml
res/effects/: basic.frag  fog.frag  water.frag  water_comp.frag
res/effects/bloom/: final.frag  hblur.frag  sub.frag  vblur.frag
res/effects/dof/: dof.frag  down.frag  hblur.frag  vblur.frag
res/materials/: Material0.material  blockasaurus.mat  dinosaur.material  ground.mat  ground.material  ground_shadow.mat  lighting.material  plant.mat  rock.mat  skydome.mat  std.mat  t1.mat  water.mat
res/materials/shaders/: ground.frag  ground.vert  lighting.glsl  test_shader.frag  test_shader.glsl  test_shader.vert
res/meshes/: Plane.mesh  Plane.mesh.xml  Suzanne.mesh  Suzanne.mesh.xml  dei_body.mesh  dei_body.skeleton  dei_body.skeleton.xml  dei_iris.mesh  dei_iris.mesh.xml
res/meshes/test.mesh/: Suzanne.mesh.xml
res/models/: rock.mesh  skydome.mesh
res/models/deinony/: anim.xml  d2.FBX  d2.blend  d2.bvh  d2.dae  d2.dxf  d2.fbx  d2.g3db  d2.g3dj  d2.md3  d2.mesh  d2.scene  d2.x3d  d22.dae  d22.fbx  dei_body.mesh  dei_body.skeleton  dei_body.skeleton.xml  untitled.dae
res/models/deinony/FBX 2013/: d22.fbx
res/models/dinosaur0/: Gallim.max
res/plants/: test.ngp
res/scripts/: scripts.xml
res/scripts/main_menu/: scripts.xml  setup.lua  state_mmenu.lua
res/scripts/options/: scripts.xml  setup.lua  state_options.lua
res/scripts/test/: scripts.xml  setup.lua  state_test.lua
res/shaders/: background.frag  deffered.frag  fbo_pass.frag  fbo_shadowb.frag  flare.frag  ground.eval  ground.frag  ground_shadow.ctrl  ground_shadow.eval  ground_shadow.geom  ground_shadow.vert  pass.frag  plant.frag  plant.vert  sample.frag  shadow.frag  shadow_bones.vert  sky.frag  sky.vert  std.vert  t0.frag  t0.tctr  t1.vert  tess.geom  test.slh  util.glh  water.frag  water_texgen.frag
res/shaders/blockasaurus/: block.frag  block.vert
res/shaders/rock/: rock.frag  rock.vert
res/water/: water_hmap.float.REMOVED.git-id
src/: Makefile  bconverter.cpp  cmake_install.cmake  config.hpp  converter.cpp  dinosauria.cpp  main.cpp  tests.cpp  util.cpp  util.hpp
src/engine/: component.cpp  component.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entity_mgr.cpp  entity_mgr.hpp  settings.cpp  settings.hpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  system.hpp  world.cpp  world.hpp
src/game/: dinosaur.cpp  dinosaur.hpp  game.cpp  game.hpp  landscape.cpp  landscape.hpp  plant.cpp  plant.hpp  render_system.cpp  render_system.hpp  rock.cpp  rock.hpp  state_mmenu.cpp  state_mmenu.hpp  state_options.cpp  state_options.hpp  state_test.cpp  state_test.hpp  water.cpp  water.hpp
src/graphics/: background.cpp  background.hpp  base.cpp  base.hpp  bmesh.cpp  bmesh.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  context.cpp  context.hpp  fbo.cpp  fbo.hpp  glsl.cpp  glsl.hpp  glsl_unif.cpp  glsl_unif.hpp  graphics.hpp  ibo.cpp  ibo.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  opengl.hpp  post.cpp  post.hpp  rendObj.cpp  rendObj.hpp  sky.cpp  sky.hpp  skydome.cpp  skydome.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  types.hpp  world.cpp  (+1 more)
src/gui/: button.cpp  button.hpp  fonts.cpp  fonts.hpp  frame.cpp  frame.hpp  gui.hpp  guiManage.cpp  guiManage.hpp  pbar.cpp  pbar.hpp  text.cpp  text.hpp  widget.hpp
src/pgen/: fbm.cpp  fbm.hpp  terrain.cpp  terrain.hpp  water.cpp  water.hpp
src/physics/: body.cpp  body.hpp  capsule.cpp  capsule.hpp  debug.cpp  debug.hpp  hull.cpp  hull.hpp  land.cpp  land.hpp  mesh.cpp  mesh.hpp  physics.hpp  sphere.cpp  sphere.hpp  world.cpp  world.hpp
src/scripting/: bindings.cpp  bindings.hpp  context.cpp  context.hpp
test/: test.cpp
(+3 files in other folders)
